kubernetes/wordpress/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  namespace: ochacafe
  labels:
    app: wordpress
    tier: database
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: database
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: mysql-pv-claim
#   namespace: ochacafe
#   labels:
#     app: wordpress
#     tier: mysql
# spec:
#   storageClassName: "oci-bv" # for OCI
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 50Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  namespace: ochacafe
  labels:
    app: wordpress
    tier: database
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: database
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          args:
            # ref: https://github.com/docker-library/mysql/issues/186#issuecomment-229480846
            - "--ignore-db-dir=lost+found"
          ports:
            - containerPort: 3306
              name: mysql
      #     volumeMounts:
      #       - name: mysql-persistent-storage
      #         mountPath: /var/lib/mysql
      # volumes:
      #   - name: mysql-persistent-storage
      #     persistentVolumeClaim:
      #       claimName: mysql-pv-claim
